fixed some spacing

--- a/styles/assignment1.css
+++ b/styles/assignment1.css
@@ -206,11 +206,12 @@
 .motto {
 
     font-weight: 700;
-    font-size: 35px;
+    font-size: 33px;
     line-height: 47px;
     color: #FFFFFF;
-    padding-top: 50px;
+    padding-top: 37px;
     padding-left: 60px;
+    margin-bottom: 20px;
 
 }
 
@@ -225,7 +226,6 @@
     border-radius: 4px;
     border: 0;
     margin-left: 60px;
-    margin-top: 24px;
 }
 
 
